<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@mipmap/def_user_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:drawableLeft="@drawable/common_google_signin_btn_icon_dark_normal"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/please_input_mail"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:singleLine="true" />


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/edt_username"
            android:layout_marginTop="1dp"
            android:drawableLeft="@drawable/common_google_signin_btn_icon_dark_normal"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:singleLine="true" />

    </RelativeLayout>

    <Button
        android:background="@drawable/def_button"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="@dimen/activity_horizontal_double_margin"
        android:layout_marginRight="@dimen/activity_horizontal_double_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title_activity_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/txt_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="2dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/title_activity_sign_up" />

        <TextView
            android:id="@+id/txt_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginTop="2dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/forget_password_ask" />
    </RelativeLayout>

</LinearLayout>