<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_user_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/side_nav_bar">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/logo" />


        <LinearLayout
            android:id="@+id/ll_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_record_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/record_num"
                android:textSize="@dimen/text_subheading_size" />

            <TextView
                android:id="@+id/text_category_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/category_num"
                android:textSize="@dimen/text_subheading_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_text"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/record_sum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="250000"
                android:textSize="@dimen/text_body_size" />

            <TextView
                android:id="@+id/category_sum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="78"
                android:textSize="@dimen/text_body_size" />
        </LinearLayout>

        <View
            android:layout_width="2px"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/divider" />
    </RelativeLayout>

    <include layout="@layout/dividing_line_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/set_budget"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:scaleType="fitXY"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@mipmap/budget" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/set_budget"
                android:textSize="@dimen/text_body_size" />

            <TextView
                android:id="@+id/budget_balance_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="0.00"
                android:textSize="@dimen/text_body_size" />

            <ImageView
                android:id="@+id/integral_img_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@mipmap/arrow_right_icon" />


        </LinearLayout>

        <include layout="@layout/dividing_line_view" />

        <Button
            android:background="@drawable/def_button"
            android:id="@+id/delete_all"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="@dimen/activity_horizontal_double_margin"
            android:layout_marginRight="@dimen/activity_horizontal_double_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/delete_all_record"
            android:textSize="@dimen/text_button_size" />

        <Button
            android:background="@drawable/def_button"
            android:id="@+id/btn_sign_out"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="@dimen/activity_horizontal_double_margin"
            android:layout_marginRight="@dimen/activity_horizontal_double_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/sign_out"
            android:textSize="@dimen/text_button_size" />
    </LinearLayout>
</LinearLayout>